Comments updated for each augmentation

--- a/AugLy_tesis_Brandon.ipynb
+++ b/AugLy_tesis_Brandon.ipynb
@@ -6,7 +6,7 @@
       "name": "AugLy tesis Brandon",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOeqaJJwTUlxQ47tydabr34",
+      "authorship_tag": "ABX9TyP5QIHFaSPiLsi+VO0w1CZk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "outputId": "9b3aff2e-d539-4cef-e73a-edca62aafb9b"
       },
       "source": [
-        "# clone the repository\n",
+        "# Clone the repository\n",
         "!git clone https://github.com/facebookresearch/AugLy.git"
       ],
       "execution_count": null,
@@ -78,7 +78,7 @@
         "outputId": "0a279e00-e7cf-4d98-a762-685cf54a2f7b"
       },
       "source": [
-        "# install the dependences required to work with AugLy. \n",
+        "# Install the dependences required to work with AugLy. \n",
         "# After installing it, a restart of the runtime should be done. \n",
         "# After restarting, run this cell again\n",
         "%cd AugLy/\n",
@@ -202,8 +202,8 @@
         "outputId": "c17b6d35-6e26-4778-8e50-e954d0af2fd9"
       },
       "source": [
-        "# get the images to augmentate, remember that the images should be inside a folder and then\n",
-        "# the folder should be zipped\n",
+        "# Get the images to augmentate, remember that the images should be inside a folder\n",
+        "# Then the folder should be zipped and uploaded to Google Drive\n",
         "%cd /content/\n",
         "!unzip /mydrive/Tesis/images_to_train.zip"
       ],
@@ -4361,7 +4361,7 @@
         "outputId": "619c78c4-8d03-420a-e42d-9a36b1fcc92d"
       },
       "source": [
-        "# verify whether we are in the right path or not\n",
+        "# Verify whether we are in the right path or not\n",
         "%pwd"
       ],
       "execution_count": null,
@@ -4389,7 +4389,7 @@
         "id": "_Pe4MkMuOPQc"
       },
       "source": [
-        "# imports needed to start the augmentation\n",
+        "# Imports needed to start the augmentation\n",
         "import augly.image as imaugs\n",
         "import PIL\n",
         "import os"
@@ -4425,7 +4425,7 @@
         "outputId": "cf6046f9-4e5c-4fcc-d308-6c8ac32de876"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the blur function\n",
         "!mkdir \"/mydrive/augmented_images/blured\" "
       ],
       "execution_count": null,
@@ -4449,6 +4449,7 @@
         "outputId": "afafe297-ca50-40c9-d282-7d0c61e2ec4b"
       },
       "source": [
+        "# Calling the blur function with a radius of 1.875\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"blured\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -6522,7 +6523,7 @@
         "id": "53m5RF_YO-8D"
       },
       "source": [
-        "# create the directory in google drive to store the output of the color_jitter function\n",
+        "# Create the directory in Google Drive to store the output of the color_jitter function\n",
         "!mkdir \"/mydrive/augmented_images/color_jitter\" "
       ],
       "execution_count": null,
@@ -6538,6 +6539,10 @@
         "outputId": "7dfff097-2a86-474b-da78-f30fb736d285"
       },
       "source": [
+        "# Calling the color jitter function with the following parameters:\n",
+        "#    - Brightness factor = 0.5\n",
+        "#    - Contrast factor = 1.0\n",
+        "#    - Saturation factor = 0.6\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"color_jitter\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -8611,7 +8616,7 @@
         "id": "Ug-3AWS9WR9y"
       },
       "source": [
-        "# create the directory in google drive to store the output of the encoding_quality function\n",
+        "# Create the directory in Google Drive to store the output of the encoding_quality function\n",
         "!mkdir \"/mydrive/augmented_images/encoding_quality\" "
       ],
       "execution_count": null,
@@ -8627,6 +8632,7 @@
         "outputId": "7be5b9d5-cd3d-4943-bd31-00381cda0e09"
       },
       "source": [
+        "# Calling the encoding quality function with the quality parameter set as 15\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"encoding_quality\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -10700,7 +10706,7 @@
         "id": "5hw7rxEOjort"
       },
       "source": [
-        "# create the directory in google drive to store the output of the pixelization function\n",
+        "# Create the directory in Google Drive to store the output of the pixelization function\n",
         "!mkdir \"/mydrive/augmented_images/pixelization\" "
       ],
       "execution_count": null,
@@ -10716,6 +10722,7 @@
         "outputId": "621bd6f1-05e0-403d-c2ca-2fffdac57f5c"
       },
       "source": [
+        "# Calling the pixelization function with a ratio of 0.35\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"pixelization\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -12789,7 +12796,7 @@
         "id": "lZ5eYll-srPQ"
       },
       "source": [
-        "# create the directory in google drive to store the output of the random_noise function\n",
+        "# Create the directory in Google Drive to store the output of the shuffle_pixels function\n",
         "!mkdir \"/mydrive/augmented_images/shuffle_pixels\" "
       ],
       "execution_count": null,
@@ -12805,6 +12812,7 @@
         "outputId": "fe76542f-b818-467c-da8b-e14ad3d3f319"
       },
       "source": [
+        "# Calling the shuffle pixels function with a factor parameter of 0.1\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"shuffle_pixels\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -14891,7 +14899,7 @@
         "outputId": "fdf7646d-74b7-4226-e6a2-2f6953d2e2f3"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the composed blur and color jitter functions\n",
         "!mkdir \"/mydrive/augmented_images/blured_and_jittered\" "
       ],
       "execution_count": null,
@@ -14915,6 +14923,11 @@
         "outputId": "1c66abd0-f5dd-44f6-fcdc-5d53eeb376a0"
       },
       "source": [
+        "# First, is called the blur function with a radius of 1.875\n",
+        "# Then, the color jitter function is called with the following parameters:\n",
+        "#    - Brightness factor = 0.5\n",
+        "#    - Contrast factor = 1.0\n",
+        "#    - Saturation factor = 0.6\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"blured_and_jittered\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -16989,7 +17002,7 @@
         "id": "ZLvLW8Hglo30"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the composed blur and encoding functions\n",
         "!mkdir \"/mydrive/augmented_images/blured_and_encoding\" "
       ],
       "execution_count": null,
@@ -17005,6 +17018,8 @@
         "outputId": "158e3943-4f71-4d56-b5ac-1436b6e4516e"
       },
       "source": [
+        "# First, is called the blur function with a radius of 1.875\n",
+        "# Then, the encoding quality function is called with a quality parameter of 15\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"blured_and_encoding\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -19079,7 +19094,7 @@
         "id": "i8-18x8gltt7"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the composed blur and shuffle pixels function\n",
         "!mkdir \"/mydrive/augmented_images/blured_and_shuffle_pixels\" "
       ],
       "execution_count": null,
@@ -19095,6 +19110,8 @@
         "outputId": "13acbebd-8f4a-4d6f-96fb-cf1afdad7060"
       },
       "source": [
+        "# First is called the blur function with a radius of 1.875\n",
+        "# Then, the shuffle pixels function is called with a factor of 0.1\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"blured_and_shuffle_pixels\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -21169,7 +21186,7 @@
         "id": "-qoZFOMSlyZ7"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the composed color jitter and encoding functions\n",
         "!mkdir \"/mydrive/augmented_images/jittered_and_encoding\" "
       ],
       "execution_count": null,
@@ -21185,6 +21202,11 @@
         "outputId": "e9bf9a85-464b-4feb-f902-75723e540edc"
       },
       "source": [
+        "# First is called the color jitter function with the following parameters:\n",
+        "#    - Brightness factor = 0.5\n",
+        "#    - Contrast factor = 1.0\n",
+        "#    - Saturation factor = 0.6\n",
+        "# Then, the encoding quality function is called with a quality parameter of 15\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"jittered_and_encoding\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -23259,7 +23281,7 @@
         "id": "ueLRTNV3nNcn"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the composed color jitter and pixelization functions\n",
         "!mkdir \"/mydrive/augmented_images/jittered_and_pixelization\" "
       ],
       "execution_count": null,
@@ -23275,6 +23297,11 @@
         "outputId": "9cccdebd-2ab6-413e-b669-6d5ecb115abe"
       },
       "source": [
+        "# First is called the color jitter function with the following parameters:\n",
+        "#    - Brightness factor = 0.5\n",
+        "#    - Contrast factor = 1.0\n",
+        "#    - Saturation factor = 0.6\n",
+        "# Then, the pixelization function is called with a ratio of 0.35\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"jittered_and_pixelization\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -25349,7 +25376,7 @@
         "id": "HM0mCzOtnvlG"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the blur function\n",
         "!mkdir \"/mydrive/augmented_images/jittered_and_shuffle\" "
       ],
       "execution_count": null,
@@ -25365,6 +25392,11 @@
         "outputId": "1fdbfe0e-9b09-4ada-9be6-cd721e6eccac"
       },
       "source": [
+        "# First is called the color jitter function with the following parameters:\n",
+        "#    - Brightness factor = 0.5\n",
+        "#    - Contrast factor = 1.0\n",
+        "#    - Saturation factor = 0.6\n",
+        "# Then, the shuffle pixels function is called with a factor of 0.1\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"jittered_and_shuffle\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -27439,7 +27471,7 @@
         "id": "PFaYDDb_n-Uu"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the encoding and pixelization function\n",
         "!mkdir \"/mydrive/augmented_images/encoding_and_pixelization\" "
       ],
       "execution_count": null,
@@ -27455,6 +27487,8 @@
         "outputId": "ab03da73-11ae-4524-b406-7b7ffc020a29"
       },
       "source": [
+        "# First is called the encoding quality function with a quality parameter of 15\n",
+        "# Then is called the pixelization function with a ratio of 0.35\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"encoding_and_pixelization\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
@@ -29529,7 +29563,8 @@
         "id": "sq_RZBCvqVph"
       },
       "source": [
-        "# create the directory in google drive to store the output of the blur function\n",
+        "# Create the directory in Google Drive to store the output of the coposed functions\n",
+        "# The composed functions are the blur, color jitter and encoding functions\n",
         "!mkdir \"/mydrive/augmented_images/blured_and_jittered_and_encoding\" "
       ],
       "execution_count": null,
@@ -29545,6 +29580,12 @@
         "outputId": "7a0dd799-e718-441e-db41-fb7394aa5927"
       },
       "source": [
+        "# First, is called the blur function with a radius of 1.875\n",
+        "# Then, the color jitter function is called with the following parameters:\n",
+        "#    - Brightness factor = 0.5\n",
+        "#    - Contrast factor = 1.0\n",
+        "#    - Saturation factor = 0.6\n",
+        "# Finally, the encoding quality function is called with a quality parameter of 15\n",
         "output_path_prefix = os.path.join(\"/mydrive\", \"augmented_images\", \"blured_and_jittered_and_encoding\")\n",
         "for image in images_list:\n",
         "  image_path = os.path.join(image)\n",
