--- a/AugLy_tesis_Brandon.ipynb
+++ b/AugLy_tesis_Brandon.ipynb
@@ -6,8 +6,7 @@
       "name": "AugLy tesis Brandon",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5QIHFaSPiLsi+VO0w1CZk",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyP5QIHFaSPiLsi+VO0w1CZk"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/BrandonHT/image-augmentation-with-AugLy/blob/main/AugLy_tesis_Brandon.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
